חנות דיסקים, גלי זחל והדוד האמיתי

--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@ Error message and password prompt
 
 <li>גלות</li>
 
+<li>גלי זחל</li>
+
 <li>גן-יה</li>
 
 <li>געזונטהייטס</li>
@@ -374,6 +376,8 @@ Error message and password prompt
 <li>חמאת שום ועשבי תיבול</li>
 
 <li>חמוצים סיניים</li>
+
+<li>חנות דיסקים</li>
 
 <li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
 
@@ -8377,7 +8381,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הדוד האמיתי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8397,7 +8401,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170505172327064" title="$:/temp/search">
+<div created="20161023184814872" modified="20170506202900979" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8530,7 +8534,7 @@ Error message and password prompt
 <div created="20161025191935600" modified="20161025192000859" title="$:/UploadURL">
 <pre>https://zzzen.com/cohen-sisters/store.php</pre>
 </div>
-<div created="20170112164936113" modified="20170125144039872" title="אהבה">
+<div created="20170112164936113" modified="20170506172307035" title="אהבה">
 <pre>[img[pictures/BH4qXOjJYFFQ2a7G.jpg]]
 
 !!![[ז'נבייב]]:
@@ -8545,7 +8549,7 @@ Error message and password prompt
 
 אני משתדלת לאהוב את עצמי, כולל את נטייתי להתרתח מדברים.
 
-למשל מרתיח אותי כשמשתמשים סתם במילים כולל במילה אהבה.
+למשל מרתיח אותי כשמשתמשים סתם במילים, כולל במילה אהבה.
 
 
 </pre>
@@ -9044,6 +9048,13 @@ Error message and password prompt
 
 </pre>
 </div>
+<div created="20170506193344594" modified="20170506202659946" title="גלי זחל">
+<pre>[img[pictures/galey-zachal.jpg]]
+
+!!![[גורה]]:
+
+אחת מתוך שתי תחנות רדיו מקומיות של [[מצפה ראשית]], שנמצאת [[בחנות הדיסקים|חנות דיסקים]].</pre>
+</div>
 <div created="20161205195559773" modified="20170225195413266" title="גן-יה">
 <pre>[img[pictures/2UFVKhA7cjmzF6Ax.jpg]]
 
@@ -9063,21 +9074,21 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161024180611154" modified="20170502191030397" tags="" title="געזונטהייטס">
+<div created="20161024180611154" modified="20170506201751635" tags="" title="געזונטהייטס">
 <pre>[img[pictures/JOI7qxUSCqd04xay.jpg]]
 
 !!![[גורה]]:
 
-בניין, הנמצא [[במצפה ראשית]], שעל ים טתיס. הבניין נמצא באזור התעשייה של העיר התחתית. הוא בן שש קומות ושייך ל[[שלום]].
+בניין, הנמצא [[במצפה ראשית|מצפה ראשית]], שעל ים טתיס. הבניין נמצא באזור התעשייה של העיר התחתית. הוא בן שש קומות ושייך ל[[שלום]].
 בקומה 4 נמצא [[ההוסטל]], בו לנים עוברי אורח בעיר.
 בקומה שלוש ישנם שלושה משרדים.
 בקומה שתיים [[מערכת עיתון אזוטרי|מערכת העיתון]].
-בקומה אחת בית קפה, [[קפה מילר]] שמו, ולו רחבה ובתוכו [[המספרה]], [[חנות דיסקים]] והקפה עצמו.
+בקומה אחת בית קפה, [[קפה מילר]] שמו, ולו רחבה ובתוכו המספרה, [[חנות דיסקים]] והקפה עצמו.
 לבניין גם מרתף בו גר [[סטאלין]], שרת הבניין. במרתף נמצאים גם המחסנים.
 
 געזונטהייטס הוא הזירה המרכזית, [[של כל מה שקרה (אולי) וכל מה שקרה (כמעט) ב HH|HH]]. </pre>
 </div>
-<div created="20170409193149814" modified="20170412203349046" tags="[[מתכוני ארוחת הכריסמס]]" title="גרטן תפו&quot;א">
+<div created="20170409193149814" modified="20170506130558588" tags="[[מתכוני ארוחת הכריסמס]]" title="גרטן תפו&quot;א">
 <pre>[img[pictures/gratin.jpg]]
 
 
@@ -9088,12 +9099,13 @@ Error message and password prompt
 החומרים הדרושים:
 
 * ק&quot;ג תפוחי אדמה
+* מיכל שמנת מתוקה
+* חצי כוס חלב
+* שליש כוס גבינת פרמז'ן או גבינת גרוייר מגוררת
+* 2 שיני שום כתושות
 * פלפל שחור גרוס
 * אגוז מוסקט מגורר 
-* 2 שיני שום כתושות
-* שליש כוס גבינת גרוייר מגוררת
-* חצי כוס חלב
-* מיכל שמנת מתוקה
+* מלח
 
 
 
@@ -9470,7 +9482,7 @@ Error message and password prompt
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20170502091126890" title="המעבדה">
+<div created="20161113192814802" modified="20170506155444413" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
 
 !!![[כאן היינו]]
@@ -9488,7 +9500,7 @@ Error message and password prompt
 
 האחיות החלו פעילותן  בעיתות מצוקה, את הדמויות כתבו בניסיון לרפא עצמן ממפגשים אנושיים מכאיבים, ולשמח את ליבן בכל דרך אפשרית אגב צפייה בשידורים חוזרים של אודטה, כאשר בבסיס יצירתן עומד המשפט של האחות הסופר [[ג'ון אירווינג]]: &quot;החיים רציניים אך האומנות היא תענוג&quot;.
 
-שמה ניתן לה מתוך רכישת כבוד ואהבה  לאחים היוצרים [[איתן וג'ואל כהן]] – שכותבים ואף מביימים את סרטיהם. היא נוסדה על ידי נשים בנות דת משה – כושיות עיוורות בצבעי כחול ולבן. 
+שמה ניתן לה מתוך רכישת כבוד ואהבה  לאחים היוצרים [[איתן וג'ואל כהן]] – שכותבים, מביימים ואף עורכים את סרטיהם. היא נוסדה על ידי נשים בנות דת משה – כושיות עיוורות בצבעי כחול ולבן. 
 
 זוהי קבוצה הולכת ומתרחבת של אנשים,שהוקמה כסוג של בדיחה וממשיכה להתקיים ברצינות תהומית, בהומור  ובענווה – בחדרים בקיבוצים, בדירות עירוניות, בבתי ההורים ואף מעבר ל[[ים טתיס]].
 
@@ -10034,6 +10046,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מכניסים למקרר, ואפשר להתחיל לאכול יום-יומיים אחר כך.
 </pre>
 </div>
+<div created="20170506201817983" modified="20170506203304972" title="חנות דיסקים">
+<pre>[img[pictures/music-house.jpg]]
+
+!!![[גורה]]:
+
+חנות הדיסקים נמצאת בקומה הראשונה של [[געזונטהייטס]]. היא שייכת [[לשלום|שלום]], כמו הבניין כולו, [[ואווה היא זו|מוכרת הדיסקים/dj]] שמחזיקה אותה. בתוך חנות הדיסקים יש אולפן קטן, שמשרת את [[גלי זחל]].</pre>
+</div>
 <div created="20170407152300115" modified="20170412203424705" tags="[[מתכוני ארוחת הכריסמס]]" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
 <pre>[img[pictures/tost.jpg]]
 
@@ -10302,7 +10321,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170318190608252" modified="20170318215934713" title="מוכרת הדיסקים/dj">
+<div created="20170318190608252" modified="20170506195042577" title="מוכרת הדיסקים/dj">
 <pre>[img[pictures/jAk6pRCB96zTIX2V.jpg]]
 
 !!![[גורה]]:
@@ -10313,7 +10332,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אווה הדיג'יי של הסידרה היא אישה בת שלושים ומשהו, מעט עצבנית, ששומרת על עצמה בכל מובן.
 
-היא והספרית הן המבוגרות האחראיות בסיפור.
+היאת [[והספרית|הספרית]] הן המבוגרות האחראיות בסיפור.
 </pre>
 </div>
 <div created="20170425201738858" modified="20170501201434028" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
@@ -10819,7 +10838,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20170429121159503" tags="[[המטבח על פי ז'נבייב]]" title="מיזונפלציה">
+<div created="20170112174310883" modified="20170506164353480" tags="[[המטבח על פי ז'נבייב]]" title="מיזונפלציה">
 <pre>[img[pictures/5w7PxVmJQ0wK3AoL.jpg]]
 
 
@@ -10828,8 +10847,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 על פי ז'נבייב, [[מיזונפלציה|https://en.wikipedia.org/wiki/Mise_en_place]] זה ה- א-ב של המטבח. זה [[ונקיון|מנקים היטב]].
 
 
-בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם מאימא או מסבתא, מכינים את החומרים, מכינים את מה שמכינים ו[[מנקים היטב]].
+בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם מאימא או מסבתא, מכינים את החומרים, מכינים את מה שמכינים, ומנקים היטב.
 
+&lt;img style=&quot;float:left; max-width:33%; margin: 0.5em&quot; src=&quot;pictures/knives.jpg&quot;&gt;
 לאחרונה שמתי לב, שאני מזנפלץ ומזונפלץ כל הזמן. אני לא מת על שיוף סכינים, אבל תמיד יש לי ספייר מכל דבר. 
 חדר העבודה שלי תמיד ערוך לכל משימה. יש שם, כמובן, את כל הציוד הנדרש, ולעולם אסדר הכל ואסגור הכל כשמסתיימת העבודה.
 אם משהו מתקלקל או מסתבך לא אשאיר אותו בלתי מתוקן.
@@ -12225,10 +12245,10 @@ Fapina''
 
 [[שלח]]</pre>
 </div>
-<div created="20161026213244448" modified="20161030120145702" title="שָה נוּאָר">
+<div created="20161026213244448" modified="20170506194143713" title="שָה נוּאָר">
 <pre>ב[[ים טתיס]] אין כיסוי סלולרי או אינטרנט, אבל ב[[געזונטהייטס]] יש
 [[מגדל סלולרי מקומי|https://en.wikipedia.org/wiki/OpenBTS]]
-שמספק לדיירים טלפוניה ביניהם, וגישה ל[[אינטראנט|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%A0%D7%98%D7%A8%D7%90%D7%A0%D7%98]], שזו מילה קצת גדולה בשביל רשת שמכילה שרת אחד בלבד. לשרת הזה קוראים שָה נוּאָר. ממעמקי [[המרתף של סטלין]] הוא מספק עולם דיגיטלי קסום וארכאי (כאילו צוקרברג וסנואודן לא היו מעולם): פורום, מערכת בלוגים, וויקי, ואפילו [[מערכת רדיו מקוון|https://en.wikipedia.org/wiki/Icecast]] שבאמצעותה אפשר להאזין ל[[גלי זחל]] — תחנת הרדיו של [[חנות התקליטים]].
+שמספק לדיירים טלפוניה ביניהם, וגישה ל[[אינטראנט|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%A0%D7%98%D7%A8%D7%90%D7%A0%D7%98]], שזו מילה קצת גדולה בשביל רשת שמכילה שרת אחד בלבד. לשרת הזה קוראים שָה נוּאָר. ממעמקי [[המרתף של סטלין]] הוא מספק עולם דיגיטלי קסום וארכאי (כאילו צוקרברג וסנואודן לא היו מעולם): פורום, מערכת בלוגים, וויקי, ואפילו [[מערכת רדיו מקוון|https://en.wikipedia.org/wiki/Icecast]] שבאמצעותה אפשר להאזין ל[[גלי זחל]] — תחנת הרדיו של [[חנות התקליטים|הדיסקים]].
 
 @@.center
 [img[למצולמים אין קשר|https://upload.wikimedia.org/wikipedia/commons/4/4c/Blackcat-Lilith.jpg]]
