--- a/index.html
+++ b/index.html
@@ -8381,7 +8381,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[חנות דיסקים]] [[מוכרת הדיסקים/dj]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10046,7 +10046,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מכניסים למקרר, ואפשר להתחיל לאכול יום-יומיים אחר כך.
 </pre>
 </div>
-<div created="20170506201817983" modified="20170506203304972" title="חנות דיסקים">
+<div created="20170506201817983" modified="20170507131528431" title="חנות דיסקים">
 <pre>[img[pictures/music-house.jpg]]
 
 !!![[גורה]]:
@@ -10321,8 +10321,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170318190608252" modified="20170506195042577" title="מוכרת הדיסקים/dj">
-<pre>[img[pictures/jAk6pRCB96zTIX2V.jpg]]
+<div created="20170318190608252" modified="20170507125759501" title="מוכרת הדיסקים/dj">
+<pre>[img[pictures/dj-eva.jpg]]
 
 !!![[גורה]]:
 
