--- a/index.html
+++ b/index.html
@@ -8385,7 +8385,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]] המעבדה [[אחיות חוץ]] [[ים טתיס]]" title="$:/StoryList">
+<div list="מספרה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10934,7 +10934,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170507173634371" modified="20170507214448528" title="מספרה">
+<div created="20170507173634371" modified="20170507220735840" tags="HH" title="מספרה">
 <pre>[img[pictures/hamispara.jpg]]
 
 !!![[גורה]]:
