--- a/index.html
+++ b/index.html
@@ -8385,7 +8385,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מספרה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שרלה הייתה אוהבת את זה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12351,12 +12351,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20161113183624587" modified="20170507195856570" title="שרלה הייתה אוהבת את זה">
+<div created="20161113183624587" modified="20170507221601208" title="שרלה הייתה אוהבת את זה">
 <pre>[img[pictures/bEhhnCTBucJG9v6o.JPG]]
 ''
 שרה'לה היתה אוהבת את זה''
 
-מילים ולחן: מאיר אריאל
+[[מילים ולחן: מאיר אריאל|https://www.youtube.com/watch?v=86rhzXjYzJg]]
 
 
 
