--- a/index.html
+++ b/index.html
@@ -8385,7 +8385,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שרלה הייתה אוהבת את זה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סיפורים שסיפרתי לנורמה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8405,7 +8405,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170507215015544" title="$:/temp/search">
+<div created="20161023184814872" modified="20170507230026856" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11100,14 +11100,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[סיפורים אמיתיים]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170507202822300" modified="20170507213622734" tags="[[סיפורים אמיתיים]]" title="סיפורים שסיפרתי לנורמה">
+<div created="20170507202822300" modified="20170507230041472" tags="[[סיפורים אמיתיים]]" title="סיפורים שסיפרתי לנורמה">
 <pre>[img[pictures/sipoorim-lenorma.jpg]]
 
 !!![[אווה]]:
 
 נורמה היא אימו של [[פיליפ]] אהובי.
 
-היא וג'ו, בעלה, שניהם ז&quot;ל, אימצו אותי כשהייתי בת 18, ממש כשהגעתי לארץ, חבולה ובודדה [[מהנחלה|הנחלה]]. 
+היא וג'ו, בעלה, שניהם ז&quot;ל, אימצו אותי כשהייתי בת 18, ממש כשהגעתי לארץ, חבולה ובודדה [[מהנחלה|סוף הנחלה]]. 
 
 סיפרתי לה את סיפור חיי, שחלקים ממנו כתובים [[בכוכב המשאלות בעל תשע הצלעות|כוכב המשאלות בעל תשע הצלעות]], לפרטי פרטים. נורמה הייתה אז בת 60.
 מה שהייתי רוצה לספר [[בסיפור האמיתי הזה|סיפורים אמיתיים]], זה שכל העניין, הוא [[לשתות משהו קר בלב מדבר|https://www.youtube.com/watch?v=DlzMlFXzfnY&amp;spfreload=10]].
