--- a/index.html
+++ b/index.html
@@ -367,6 +367,8 @@ Error message and password prompt
 
 <li>המשק האוטרקי שלנו</li>
 
+<li>הנה, כך</li>
+
 <li>הסינים</li>
 
 <li>הסיפור על גורה, שסופר לאווה, על ידי יויו</li>
@@ -416,6 +418,8 @@ Error message and password prompt
 <li>ליל הדובונאז'</li>
 
 <li>לפתן חבושים</li>
+
+<li>לקבל התראות על חידושים באתר</li>
 
 <li>לקשקש בשולי הדף</li>
 
@@ -8380,8 +8384,8 @@ Error message and password prompt
 <div created="20161023184709475" modified="20170508162053519" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20161023184705203" modified="20170508163840157" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20161023184705203" modified="20170508163428473" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -8389,7 +8393,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הנה, כך]] [[לקבל התראות על חידושים באתר]] [[מתכוני ארוחת הכריסמס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9714,6 +9718,15 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
+<div created="20170508180956582" modified="20170508181436244" title="הנה, כך">
+<pre>!!!טיפים של [[סטלין]] לגבי האתר, וכל מיני סייבר-דברים
+
+
+&lt;&lt;list-links filter:&quot;[tag[הנה, כך]]&quot;&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20161112205825183" modified="20170502194316142" title="הסינים">
 <pre>[img[pictures/S0BooiQwhm4gYLFk.JPG]]
 
@@ -10410,6 +10423,26 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
+</div>
+<div created="20170508170152174" modified="20170508180611748" tags="[[הנה, כך]]" title="לקבל התראות על חידושים באתר">
+<pre>האתר הזה מפרסם התראות בפורמט [[רסס|https://he.wikipedia.org/wiki/RSS]]
+&lt;small&gt; 
+(שהפסיק להיות פופולרי במסגרת הכחדת מורשתו של [[ארון שוורץ|https://he.wikipedia.org/wiki/%D7%90%D7%A8%D7%95%D7%9F_%D7%A9%D7%95%D7%95%D7%A8%D7%A5]], וסליחה שאני זקן ומריר)
+&lt;/small&gt;
+''[[כאן|http://coensisters.org/rss.xml]]''.
+
+!!!''קבלת התראות באנדרואיד''
+
+מתקינים [[fNotifier|https://play.google.com/store /apps/details?id=org.indywidualni.fnotifier]] ומריצים.
+
+# בוחרים `Settings`
+# בוחרים `Notifications feed`
+# כותבים שם `http://coensisters.org/rss.xml`
+[img[pictures/fnotifier.gif]]
+
+!!!''קבלת התראות באייפונים וכאלה''
+
+[[ספרו לנו|https://github.com/tamaroty/coen-sisters/issues]] אם אתם יודעים איך 😉</pre>
 </div>
 <div created="20170508150726832" modified="20170508163424438" tags="[[הנה, כך]]" title="לקשקש בשולי הדף">
 <pre>@@.ltr
