--- a/index.html
+++ b/index.html
@@ -8393,7 +8393,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לקבל התראות על חידושים באתר]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הנה, כך]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9569,8 +9569,10 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170508180956582" modified="20170508181436244" title="הנה, כך">
-<pre>!!!טיפים של [[סטלין]] לגבי האתר, וכל מיני סייבר-דברים
+<div created="20170508180956582" modified="20170508225633583" title="הנה, כך">
+<pre>[img[pictures/hine-kach.jpg]]
+
+!!!טיפים של [[סטלין]] לגבי האתר, וכל מיני סייבר-דברים
 
 
 &lt;&lt;list-links filter:&quot;[tag[הנה, כך]]&quot;&gt;&gt;
@@ -10275,8 +10277,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170508170152174" modified="20170508183205941" tags="[[הנה, כך]]" title="לקבל התראות על חידושים באתר">
-<pre>האתר הזה מפרסם התראות בפורמט [[רסס|https://he.wikipedia.org/wiki/RSS]]
+<div created="20170508170152174" modified="20170508223031450" tags="[[הנה, כך]]" title="לקבל התראות על חידושים באתר">
+<pre>[img[pictures/rko.jpg]]
+
+האתר הזה מפרסם התראות בפורמט [[רסס|https://he.wikipedia.org/wiki/RSS]]
 &lt;small&gt; 
 (שהפסיק כנראה להיות פופולרי במסגרת מאמצים להכחדת מורשתו של [[ארון שוורץ|https://he.wikipedia.org/wiki/%D7%90%D7%A8%D7%95%D7%9F_%D7%A9%D7%95%D7%95%D7%A8%D7%A5]] זצ&quot;ל, וסליחה שאני זקן ומריר)
 &lt;/small&gt;
