--- a/index.html
+++ b/index.html
@@ -8381,11 +8381,11 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170119225008497" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20161023184709475" modified="20170508162053519" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/System</pre>
+<div created="20161023184709475" modified="20170509211739107" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20170508163428473" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20161023184705203" modified="20170509211928035" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -8393,7 +8393,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הנה, כך]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="הברמנית [[דיוויד בואי]] [[שיטת אלכסנדר]] [[הכפר הגלובלי]] [[ירקות קלויים]] [[לייף סטייל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10277,7 +10277,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170508170152174" modified="20170508223031450" tags="[[הנה, כך]]" title="לקבל התראות על חידושים באתר">
+<div created="20170508170152174" modified="20170509203936236" tags="[[הנה, כך]]" title="לקבל התראות על חידושים באתר">
 <pre>[img[pictures/rko.jpg]]
 
 האתר הזה מפרסם התראות בפורמט [[רסס|https://he.wikipedia.org/wiki/RSS]]
@@ -11032,8 +11032,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מצפה ראשית, או בקיצור, [[מיצפרש]], הוא הישוב, [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
 </div>
-<div created="20170223175057546" modified="20170508150102095" title="מקלדת">
+<div created="20170223175057546" modified="20170509211134770" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
+
+!!![[גורה]]:
+
 ''
 חברה טובה''</pre>
 </div>
@@ -11111,12 +11114,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 האחות הבכורה והביולוגית של גורה ושלי.</pre>
 </div>
-<div created="20170331195529688" modified="20170508150204028" tags="[[אחות כהן]]" title="סוניה">
+<div created="20170331195529688" modified="20170509210503587" tags="[[אחות כהן]]" title="סוניה">
 <pre>[img[pictures/sonya.jpg]]
 
 !!![[גורה]]:
 
-סוניה המהממת היא אישה הונגריה בת חמשים ושש או שבע. היא ומרק, בעלה, היגרו לפריז כשהיו כבר בני חמשים, בעקבות שני בניהם. 
+סוניה המהממת היא אישה הונגריה בת חמשים ושש או שבע. היא [[ומרק|מרק]], בעלה, היגרו לפריז כשהיו כבר בני חמשים, בעקבות שני בניהם. 
+
+שניהם דיברו צרפתית, כשפה שניה, מגיל צעיר.
 
 היא בשלנית מופלאה. על ראשה נישא גולגול ענקי, היא די גבוהה והיא הכי חמודה בעולם.
 
@@ -12363,12 +12368,12 @@ Fapina''
 [img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
 </pre>
 </div>
-<div created="20161206222443036" modified="20170426202712223" title="שיטת אלכסנדר">
+<div created="20161206222443036" modified="20170509212301701" title="שיטת אלכסנדר">
 <pre>[img[pictures/shitat-alexander.jpg]]
 
 !!![[אירי]]:
 
-בנערותי סבלתי מכאבי גב חזקים שהתבררו כעקמת שנבעה מצמיחה מהירה לגובה. בין גיל 14 ל-15 נוספו לי 12 סנטימטרים וגובהי הסופי הגיע ל- 172 ס&quot;מ. אמי לקחה אותי לכל סוגי המרפאים והרופאים וכך נתקלתי לראשונה [[בשיטת אלכסנדר|https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%98%D7%AA_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]]. די מהר הוחלט שאצטרך ללבוש סד שיישר את גבי ונטשתי גם את כל הדברים האחרים. בסוף השרות הצבאי הכאבים חזרו והחלטתי לנסות שוב את השיטה ומאז אני הולכת כל שבוע לשיעור ואף מניחה את הגב מידי יום בעצמי. לקח לי לפחות שנה עד שהצלחתי להבין את שלושת המשפטים הבסיסיים עליהם מושתתת העבודה כולה. (סרטון אלכסנדר באתר של יויו).
+בנערותי סבלתי מכאבי גב חזקים שהתבררו כעקמת שנבעה מצמיחה מהירה לגובה. בין גיל 14 ל-15 נוספו לי 12 סנטימטרים וגובהי הסופי הגיע ל- 172 ס&quot;מ. אמי לקחה אותי לכל סוגי המרפאים והרופאים וכך נתקלתי לראשונה [[בשיטת אלכסנדר|https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%98%D7%AA_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]]. די מהר הוחלט שאצטרך ללבוש סד שיישר את גבי ונטשתי גם את כל הדברים האחרים. בסוף השרות הצבאי הכאבים חזרו והחלטתי לנסות שוב את השיטה ומאז אני הולכת כל שבוע לשיעור ואף מניחה את הגב מידי יום בעצמי. לקח לי לפחות שנה עד שהצלחתי להבין את שלושת המשפטים הבסיסיים עליהם מושתתת העבודה כולה. 
 
 להניח לצוואר להיות חופשי
 
