מקרר, יד ימין, החיים זה לא, גבר פריביגי, תיקונים

--- a/index.html
+++ b/index.html
@@ -285,6 +285,8 @@ Error message and password prompt
 
 <li>ג'ונג</li>
 
+<li>גבר פריבילגי</li>
+
 <li>גואן יין</li>
 
 <li>גורה</li>
@@ -330,6 +332,10 @@ Error message and password prompt
 <li>הדירה</li>
 
 <li>ההוסטל</li>
+
+<li>ההיררכיה במקרר</li>
+
+<li>החיים זה לא דיבורים</li>
 
 <li>החיים נועדו למי שלא יכול להתמודד עם סמים</li>
 
@@ -382,6 +388,8 @@ Error message and password prompt
 <li>חנות דיסקים</li>
 
 <li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
+
+<li>יד ימין אינה יודעת</li>
 
 <li>יויו</li>
 
@@ -8391,10 +8399,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170119225008497" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20161023184709475" modified="20170512173332878" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20170514230622843" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Recent</pre>
 </div>
-<div created="20161023184705203" modified="20170512222637653" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170514230624188" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8403,7 +8411,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כשהיו מעט מכוניות]] אהבה פעם [[כשאנשים עוד היו אופטימים]] [[כשאמרו קסטה]] [[כשהיו כבישים צרים וארוכים]] [[כשהיו בתי קולנוע]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="גורה יויו [[יד ימין אינה יודעת]] [[החיים זה לא דיבורים]] דניאל [[דןדן נסע]] [[גבר פריבילגי]] [[מה שבאמת קרה בארוחת כריסמס]] ז'נבייב [[ההיררכיה במקרר]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8423,7 +8431,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170512222350782" title="$:/temp/search">
+<div created="20161023184814872" modified="20170514232543459" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9008,6 +9016,24 @@ Error message and password prompt
 
 !!![[גורה]]:</pre>
 </div>
+<div created="20170514214551974" modified="20170514232942321" tags="[[סיפורים אמיתיים]]" title="גבר פריבילגי">
+<pre>
+[img[pictures/gever-privilegy.jpg]]
+
+!!![[יויו]]:
+
+נכון, אני גבר פריבילגי, ולא שקל לי לכנות את עצמי גבר, הייתי מעדיף בחור, אך בקרוב מאד ימלאו לי 38.
+  
+אינני מתנצל על כך, שאני גבר פריבילגי. אינני חמדן. אני לא בודק מה יש לאחרים.
+
+אולי רק אדם פריבילגי, יכול להרשות לעצמו לא לבדוק מה יש לאחרים, אבל כל אחד יכול לראות את יתרונותיו היחסיים.
+
+אני גבר עם הרבה בעיות, ויש לי בעיית דימוי עצמי קשה.
+
+נולדתי עם רגל אחת קצרה מן השניה עד כדי צליעה קלה, וסבלתי מכאבים באגן הירכיים. בילדותי עברתי ניתוחים. הייתי ואני עדיין - נמוך. אני כל הזמן מנסה לרצות, וזה מגיע לשיא, כשמדובר בנשים.
+
+דווקא כשמדובר בנשים, המילה אישה, עושה לי את זה.</pre>
+</div>
 <div created="20170324140400308" modified="20170424213754317" tags="[[אחות כהן]]" title="גואן יין">
 <pre>[img[pictures/guen-inn.jpg]]
 
@@ -9023,7 +9049,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161026214951927" modified="20170417190335473" tags="[[נאמני הגנזך]] [[אחות כהן]]" title="גורה">
+<div created="20161026214951927" modified="20170514201331333" tags="[[נאמני הגנזך]] [[אחות כהן]]" title="גורה">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 !!![[יויו]]:
@@ -9033,7 +9059,7 @@ Error message and password prompt
 
 היא משוש חיי ואשמור עליה לנצח.
 
-את התמונה הזאת מצאתי זרוקה בפח שליד המייבש הכביסה. כן, היא אמרה לי שכבר כמה ימים היא מנסה לצייר את עצמה אבל לא הולך לה.
+את התמונה הזאת מצאתי זרוקה בפח שליד המייבש הכביסה. כן, היא אמרה לי שכבר כמה ימים היא מנסה [[לצייר את עצמה|החיים זה לא דיבורים]], אבל לא הולך לה.
 
 היא בת הזקונים להורי, [[דינה ז&quot;ל]] ויואל שיבדל&quot;ח, שהולידו את חמישתנו: [[נדיה]], [[קרן]], [[אותי|יויו]],  [[גיגי]] ואת הגורה.
 
@@ -9375,6 +9401,35 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 המחירים בו סבירים, והוא כולל עשרה חדרים קטנים ממש, הכוללים חלל זעיר ובו המקלחון מעל האסלה.
 
 במרכז ההוסטל  &quot;סלון&quot; נחמד מלא בספות  וכורסאות ומסכי טלוויזיה ורמקולים ומטבח לקפה וחטיפים.
+
+</pre>
+</div>
+<div created="20170514230844769" modified="20170514232328726" tags="[[המטבח על פי ז'נבייב]]" title="ההיררכיה במקרר">
+<pre>
+[img[pictures/bamekarer.jpg]]
+
+!!![[ז'נבייב]]:
+
+במקרר - למעלה זה כל מה שמתוק, ארוז, ניטרלי - כמו למשל - יוגורטים, חמאה, עוגה, ריבות, גבינות.
+
+ככל שיורדים במדפים, זה הולך ונהיה פחות נעים. ירקות, תבשילים, בשר - למרות טעמם הטעים.
+
+כי זה לא נורא אם נשפך קצת רוטב פירות יער על הבשר, אבל זה בלתי הפיך, אם הרוטב של הבשר נשפך על העוגות.</pre>
+</div>
+<div created="20170514201348734" modified="20170514233042321" tags="[[סיפורים אמיתיים]]" title="החיים זה לא דיבורים">
+<pre>
+[img[pictures/hachaim-ze-lo.jpg]]
+
+!!![[גורה]]:
+
+החיים זה לא דיבורים, זה מעשים.
+
+ולא שאין מקום, חלילה, לדיבורים, אך בסופו של דבר, אם אתה אומר: &quot;אני מבטיח שאני לא אצעק יותר, ולא אאיים&quot;, אז במינימום, אתה מוכרח להשתפר.
+
+דןדן המתוק, [[שנסע|דןדן נסע]], אכל ממני כל-כך הרבה חרא של עצבים, שלא קשורים אליו. גם שקשורים אליו זה לא בסדר.
+
+הוא כל-כך השתדל להיות בסדר. הפסיביות שלו מרתיחה אותי. הוא מת עלינו, אבל הפעלתנות שלנו גדולה עליו. [[דניאל]] אומר, שיש לו &quot;אותה האנרגיה&quot; כמו זו שלנו, אבל שהוא מאותגר מבחינה חריצותית, ושכל מה שבא לו זה לא לעשות כלום, ורק להתמסטל. כאילו שאני לא מכירה את זה.
+
 
 </pre>
 </div>
@@ -9984,7 +10039,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של פורה המיוסר. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
 </div>
-<div created="20161112221314170" modified="20170508145820282" tags="[[אחות כהן]]" title="ז'נבייב">
+<div created="20161112221314170" modified="20170514230829528" tags="[[אחות כהן]]" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 ''
 המתוקה''
@@ -10010,7 +10065,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא חתולה יפה שמשפחתה היגרה ממרוקו לפריז.
 
-היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת שהכל במקום. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
+היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
 </div>
 <div created="20170411155118410" modified="20170412203304600" tags="[[מתכוני ארוחת הכריסמס]]" title="חזרת">
 <pre>[img[pictures/chazeret.jpg]]
@@ -10102,14 +10157,20 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * קולים פרוסות לחם בתנור עד לגוון הרצוי.
 * מרכיבים את הטוסט: מניחים פרוסה קלויה, מעליה מורחים טחינה גולמית, מעליה רסק עגבניות, מעל מניחים ירקות קלויים, גוררים פרמז'ן וזה מוכן.</pre>
 </div>
-<div created="20161026214908307" modified="20170417190625288" tags="[[נאמני הגנזך]] [[אחות כהן]]" title="יויו">
+<div created="20170514194133105" modified="20170514223402769" tags="[[בחוות החיות]]" title="יד ימין אינה יודעת">
+<pre>[img[pictures/yad-yamin.jpg]]
+
+
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, יד ימין אינה יודעת, מה יד שמאל עושה. (ולהיפך).</pre>
+</div>
+<div created="20161026214908307" modified="20170514214541113" tags="[[נאמני הגנזך]] [[אחות כהן]]" title="יויו">
 <pre>!!![[אירי]]:
 
 [img[pictures/yoyo.jpg]]
 
 עבורי יויו היה, ראשית כל, האח האהוב של גורה, אותה הכרתי כשהיינו בנות 12.
 
-כעת הוא האלוהים שלי. אני מאמינה לו, אני מאמינה בו, אני מאמינה למה שהוא מאמין בו, אני מעריצה אותו, אני אוהבת אותו, אני אוהדת אותו, אני מודה לו מידי יום, אני נעזרת בו, אני מקשיבה לו, אני מתה על הטעם שלו ועל הראש שלו - ואני רוצה תמיד להיות סמוכה לשולחן סביבו הוא סועד את לבו המתוק.
+כעת הוא האלוהים שלי. [[אני מאמינה לו|גבר פריבילגי]], אני מאמינה בו, אני מאמינה למה שהוא מאמין בו, אני מעריצה אותו, אני אוהבת אותו, אני אוהדת אותו, אני מודה לו מידי יום, אני נעזרת בו, אני מקשיבה לו, אני מתה על הטעם שלו ועל הראש שלו - ואני רוצה תמיד להיות סמוכה לשולחן סביבו הוא סועד את לבו המתוק.
 
 
 הוא יכול להתחרפן כשאנשים אומרים: אפיזודה חולפת או ריטואל קבוע. הוא נהיה חולה אם מאחרים. הוא עובד על עצמו. הוא אמר לי אתמול שכדאי שאשים לב לכך, שעם כל המודעות העצמית שלי אני די עסוקה בתחת של עצמי. הוא אמר לנו כמה שבועות לפני ש[[דיוויד בואי]] מת, שלפי black star הוא יודע שהוא הולך למות, וששומעים את זה מכל הבחינות.
@@ -10157,7 +10218,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקרוב יועתק לכאן.</pre>
 </div>
-<div created="20170425180523126" modified="20170512213533312" tags="[[בחוות החיות]]" title="כורתים עצים">
+<div created="20170425180523126" modified="20170514194231385" tags="[[בחוות החיות]]" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
 
 !!![[גורה]]:
@@ -10171,9 +10232,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20170512222504639" modified="20170512223951693" tags="פעם" title="כשאמרו קסטה">
+<div created="20170512222504639" modified="20170514232358882" tags="פעם" title="כשאמרו קסטה">
 <pre>''
-וטייפ''
+אמרו טייפ''
 
 [img[pictures/kalletet.jpg]]
 </pre>
@@ -10399,7 +10460,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161114202954459" modified="20170508145939990" title="מה שבאמת קרה בארוחת כריסמס">
+<div created="20161114202954459" modified="20170514231925732" title="מה שבאמת קרה בארוחת כריסמס">
 <pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
 
 !!![[אווה]]:
@@ -10424,7 +10485,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &quot;ברוכה הבאה איריצ'קה. הנה תראו חברים. אירי מכירה אותי מאז ומעולם ומצטרפת ללא היסוס. זה אומר משהו לא? רוצה לספר לנו אירי מותק?&quot;.
 &quot;אחר כך&quot;. היא ענתה והתיישבה.
 &quot;אני מבקש להצטרף לחבורה יויו, ואני רוצה לדבר בבקשה עכשיו&quot;, קם פיליפ היפה שלי בנחישות והחל מיד מדבר. &quot;חג שמח לכולכם אנשים יקרים, שמעו, אני תופס כאן טרמפ על הדברים של יויו. כשיויו שלח לי את הכתובת שלשום, מיד הבנתי באיזו דירה מדובר. הייתי כאן כבר בשמונה ו12 דקות עם הארגז עם הדברים. עמדתי ברחוב כמו אידיוט בלי לזוז. לא ידעתי מה ואיך אספר לכם אבל ידעתי שאני לא יכול לא לספר לכם. התמהמהתי בחוץ וראיתי איך כולם נכנסים עד שהחלטתי להיכנס. נעמדתי ליד הדלת בלי להעז לצלצל בפעמון עד ששמעתי את יויו אומר שרק אני לא הגעתי, מהבהלה לחצתי על הפעמון. יויו קיבל את פני ובעודי מוסר לו את הארגז הכבד אני רואה את אווה&quot;, קולו התרכך והוא הביט בי, &quot;אווה היפה והמתוקה שהגיע לבית אמי ובעלה ג'ו כשהייתה בת 18. אני לא יכול לשכוח את הרגע שראיתי אותה. אהבתי אותה כבר במבט הראשון. הייתה לי חברה אז והייתי דוקטורנט בן 30. לימים נישאתי לאותה חברה, ריטה היה שמה ונולדו לנו שני בנים, מקס ואיתן. למרות שכבר הייתי עם ריטה, התאהבתי באווה אך נכנעתי לחיים, אני מודה, כבר עשיתי מספיק צרות עד אז ואווה הייתה צעירה כל כך. חיי עם ריטה היו חיים טובים מאד. היא הייתה חברה ואימא נהדרת. כן, אני לא אדם מושלם&quot;, הוא חייך. &quot;ריטה נפטרה חצי שנה לאחר שנתגלה דבר המחלה. אני המאושר באדם מרגע זה ואני אומר לכם שאם אווה תרצה אותי אני שלה עד לשארית חיי&quot;. שוב שריקות רמות מהקהל. &quot;ועכשיו לדירה שלכם, אנשים יקרים. בדירה הזו גרו בעבר גניקולוג נחשב בעיר, רעייתו ושתי בנותיהם המתבגרות. היה להם גם בן פגוע מח שהיה במוסד. אשתו הייתה מטופלת שלי. לפני המקרה הכרתי את הסיפור בגרסת האם בלבד. סופו הטרגי של הסיפור הוא שלפני שלוש שנים שתי בנותיה התאבדו כאן בדירה. הן ירו זו בראשה של זו באותו הרגע ולא פספסו. הצעירה הייתה בת 15 והבכורה בת 16 וחצי. האימא טופלה אצלי גם אחרי שזה קרה וכחלק מהטיפול הגעתי אתה לכאן. הם היו הורים קשוחים מאד ובעלה ניצל את הבנות מינית. בעיקר את הקטנה. אחרי שהבנות התאבדו הם נפרדו. הוא השאיר לה את הבית ועוד רכוש וממון ונסע בלי להגיד לאן והיא לא שאלה. הילד היה במוסד ולאחר המקרה היא ביקרה אותו כמעט מידי יום. היא עברה לצד השני של העיר אבל החליטה לא למכור את הדירה. שנה ומשהו אחרי שזה קרה היא החליטה לשבור את כל הקירות ולהשאיר אותה בינתיים ריקה. את הטיפולים אצלי היא הפסיקה לפני קצת יותר משנה ולדעתי היא חזרה לעבוד וללמוד והשתקמה יחסית. עורך הדין שפנה אליכם הוא הבן של אחותה ולהרגשתי אין שום בעיה עם הדירה הזו, לא נותר בה זכר מהעבר. היא נהדרת והפכתם אותה לטירה&quot;.
-&quot;אתה צודק פיליפ, שום אקדח לא תלוי על אף קיר בשום מערכה בסיפור שלנו. האקדחים שהיו כאן... היו שייכים להצגה הקודמת שהייתה כאן, וזה היה בזמן אחר. היה כאן אז תאטרון אחר. וכעת יש הצגה שונה לחלוטין וזה בכלל לא תאטרון, זה קולנוע... וזה סרט ללא יריות&quot;. גורה אמרה בקול רם, מדגישה כל משפט בתנועות ובפאוזות קומיות וצחקה.
+&quot;אתה צודק פיליפ, שום אקדח לא תלוי על אף קיר בשום מערכה בסיפור שלנו. האקדחים שהיו כאן... היו שייכים להצגה הקודמת שהייתה כאן, וזה היה בזמן אחר. היה כאן אז תאטרון אחר. וכעת יש הצגה שונה לחלוטין וזה בכלל לא תאטרון, [[זה קולנוע... וזה סרט ללא יריות&quot;|יד ימין אינה יודעת]]. גורה אמרה בקול רם, מדגישה כל משפט בתנועות ובפאוזות קומיות וצחקה.
 עוד שריקות הגיעו מהקהל המדושן. 
 &quot;נכון, מיד כשנכנסנו לכאן שלושתנו הרגשנו מצוין ולא דאגנו כלל וגם עכשיו אחרי שפיליפ סיפר את הסיפור הנוראי אין בי כל דאגה&quot;. דןדן הוסיף והשריקות גברו. 
 &quot;אנחנו עוד בטח נמשיך לדבר על כל זה בעתיד יקרים שלי&quot;, פיליפ המשיך, &quot;אבל יש דבר שלישי שאני רוצה להגיד לכם עכשיו כאן לפני כל האורחים, בערב בלתי צפוי זה ובניגוד לכל הכללים ואז אניח לכם והוא, שמרגע זה אתם אינכם פציינטים שלי יותר גורה ויויו אהובים שלי. אולי לא כך נהוג לעשות אך כבר שברתי כל כלל אפשרי ומרגע זה אתם בני משפחתי באופן רשמי, שכן אתם המלאכים שהביאו אלי את אווה שלי היפה והיקרה, וכך או אחרת אתם יכולים בכל רגע ורגע לשוחח אתי על כל דבר ותמיד אהיה לכם&quot;.
